Added check for existing entry with the patientId and patientIdentifier in the local db.